--- a/Layer Spy/index.html
+++ b/Layer Spy/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Layer Spy</title>
     <link rel="stylesheet" href="https://openlayers.org/en/v3.19.0/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="map.css" media="screen" title="no title">
     <script src="https://openlayers.org/en/v3.19.0/build/ol.js"></script>
   </head>
   <body>
